[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level       = "z"        # optimize for size rather than speed
lto             = "fat"      # full link-time optimisation
codegen-units   = 1          # best for LTO and dead-code elimination
overflow-checks = false      # skip integer-overflow checks
debug           = false      # strip out any remaining debug info

[dependencies]
tiny_http = "0.12.0"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
html-escape = "0.2.13"
chrono = "0.4.41"
threadpool = "1.8.1"
